--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <title>Projeto Login</title>
     <link rel="stylesheet" href="estilos/style.css">
     <link rel="stylesheet" href="estilos/media-query.css">
 </head>
+
 <body>
     <main>
         <section id="login">
@@ -16,20 +19,23 @@
             </div>
             <div id="formulario">
                 <h1>login</h1>
-                <p>Seja bem-vindo(a) novamente. Faça login para acessar sua conta e poder fazer as confiugrações no seu ambiente.</p>
+                <p>Seja bem-vindo(a) novamente. Faça login para acessar sua conta e poder fazer as confiugrações no seu
+                    ambiente.</p>
                 <form action="login.php" method="post" autocomplete="on">
                     <div class="campo">
                         <span class="material-symbols-outlined">
                             person
                         </span>
-                        <input type="email" name="login" id="ilogin" placeholder="Seu e-mail" autocomplete="email" required>
+                        <input type="email" name="login" id="ilogin" placeholder="Seu e-mail" autocomplete="email"
+                            required>
                         <label for="ilogin">Login</label>
                     </div>
                     <div class="campo">
                         <span class="material-symbols-outlined">
                             key
                         </span>
-                        <input type="password" name="senha" id="isenha" placeholder="Sua Senha" autocomplete="current-password" required>
+                        <input type="password" name="senha" id="isenha" placeholder="Sua Senha"
+                            autocomplete="current-password" required>
                         <label for="isenha">Senha</label>
                     </div>
                     <input type="submit" value="Entrar">
@@ -44,4 +50,5 @@
         </section>
     </main>
 </body>
+
 </html>
