--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
             <div id="imagem">
                 <!-- Aqui vai a imagem nas CSS -->
             </div>
-            <div id="formulario">
+            <div id="screenFormulario">
                 <h1>login</h1>
                 <p>Seja bem-vindo(a) novamente. Faça login para acessar sua conta e poder fazer as confiugrações no seu
                     ambiente.</p>
-                <form action="login.php" method="post" autocomplete="on">
+                <form action="login.php" method="post" autocomplete="on" id="">
                     <div class="campo">
                         <span class="material-symbols-outlined">
                             person
